--- a/food-restaurant-project/styles/style.css
+++ b/food-restaurant-project/styles/style.css
@@ -13,7 +13,7 @@
   background-image:linear-gradient(180.00deg, rgb(9, 9, 9) 3.482%,rgba(16, 16, 16, 0) 101.632%) , url('../assets/hero-bg.png');
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;-
+  background-repeat: no-repeat;
 
   display: flex;
   align-items: center;
