--- a/food-restaurant-project/styles/style.css
+++ b/food-restaurant-project/styles/style.css
@@ -1,16 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 /* font-family: "Work Sans", sans-serif; */
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-#hero{
+#hero {
   width: 100%;
   min-height: 100vh;
-  background-image:linear-gradient(180.00deg, rgb(9, 9, 9) 3.482%,rgba(16, 16, 16, 0) 101.632%) , url('../assets/hero-bg.png');
+  background-image: linear-gradient(180.00deg, rgb(9, 9, 9) 3.482%, rgba(16, 16, 16, 0) 101.632%), url('../assets/hero-bg.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -23,6 +23,7 @@
   padding: 20px;
 
 }
+
 #hero div {
   max-width: 90%;
   width: 600px;
@@ -42,10 +43,80 @@
 #hero button {
   margin-top: 15px;
   padding: 10px 20px;
-  font-size: 1rem;
+  font-size: 15px;
   background-color: #ff6600;
   color: white;
   border: none;
   cursor: pointer;
   border-radius: 5px;
+}
+
+#card-box {
+  width: 884px;
+  margin: 100px auto;
+}
+
+#card-box .info {}
+
+#card-box {
+  color: rgb(16, 16, 16);
+  font-family: Work Sans;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 32px;
+  letter-spacing: 0%;
+  text-align: center;
+}
+
+#card-box .subtitle {
+  color: rgb(16, 16, 16);
+  font-size: 10px;
+  font-weight: 100;
+  line-height: 14px;
+  letter-spacing: 0%;
+  text-align: center;
+  opacity: 0.6;
+}
+
+.card-container {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.card {
+  max-width: 250px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.card .image-box {
+  width: 250px;
+
+}
+
+.card .image-box img {
+  width: 100%;
+}
+
+.card .shop {
+  background-color: rgba(82, 195, 3, 0.15);
+  padding: 10px 18px 10px 18px;
+  border-radius: 8px;
+  background: rgba(82, 195, 3, 0.15);
+}
+
+button {
+  text-align: center;
+  color: aliceblue;
+  gap: 10;
+  padding: 11px 23px 11px 23px;
+  border-radius: 8px;
+  background: rgb(82, 195, 3);
+  border-style: none;
+  cursor: pointer;
 }
